[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="botao1" type="Button" parent="."]
margin_left = 53.0
margin_top = 32.0
margin_right = 162.0
margin_bottom = 69.0
text = "COLETAR DADOS"

[node name="botao2" type="Button" parent="."]
margin_left = 55.0
margin_top = 104.0
margin_right = 173.0
margin_bottom = 139.0

[node name="botao3" type="Button" parent="."]
margin_left = 51.0
margin_top = 170.0
margin_right = 174.0
margin_bottom = 206.0

[node name="Label" type="Label" parent="."]
margin_left = 226.0
margin_top = 102.0
margin_right = 355.0
margin_bottom = 140.0

[node name="Label2" type="Label" parent="."]
margin_left = 223.0
margin_top = 170.0
margin_right = 356.0
margin_bottom = 205.0

[node name="numero" type="LineEdit" parent="."]
margin_left = 395.0
margin_top = 32.0
margin_right = 530.0
margin_bottom = 66.0

[node name="nome" type="LineEdit" parent="."]
margin_left = 224.0
margin_top = 32.0
margin_right = 359.0
margin_bottom = 66.0

[connection signal="pressed" from="botao1" to="." method="_on_botao_1_pressed"]
[connection signal="pressed" from="botao1" to="." method="_on_botao1_pressed"]
[connection signal="pressed" from="botao2" to="." method="_on_botao_2_pressed"]
[connection signal="pressed" from="botao3" to="." method="_on_botao3_pressed"]
[connection signal="pressed" from="botao3" to="." method="_on_botao_3_pressed"]
